--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "ng-new-bazaar": {
+    "trebol-ng": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -14,7 +14,7 @@
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
             "aot": true,
-            "outputPath": "dist/ng-new-bazaar",
+            "outputPath": "dist/trebol-ng",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -63,18 +63,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "ng-new-bazaar:build"
+            "browserTarget": "trebol-ng:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "ng-new-bazaar:build:production"
+              "browserTarget": "trebol-ng:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "ng-new-bazaar:build"
+            "browserTarget": "trebol-ng:build"
           }
         },
         "test": {
@@ -114,7 +114,7 @@
         }
       }
     },
-    "ng-new-bazaar-e2e": {
+    "trebol-ng-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "prefix": "",
@@ -123,11 +123,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "ng-new-bazaar:serve"
+            "devServerTarget": "trebol-ng:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "ng-new-bazaar:serve:production"
+              "devServerTarget": "trebol-ng:serve:production"
             }
           }
         },
@@ -143,5 +143,8 @@
       }
     }
   },
-  "defaultProject": "ng-new-bazaar"
+  "defaultProject": "trebol-ng",
+  "cli": {
+    "analytics": "83e020b2-8b28-4f70-a356-9f0dd5cec7e9"
+  }
 }
