--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -7,7 +7,11 @@
     "main.ts",
     "polyfills.ts"
   ],
-  "include": [
-    "./**/*.ts"
+  "include": [ 
+    "./**/*.ts" 
+  ],
+  "exclude": [
+    "**/node_modules",
+    "./**/*.spec.ts"
   ]
 }
