--- a/angular.json
+++ b/angular.json
@@ -59,16 +59,16 @@
                   "with": "src/environments/environment.prod.ts"
                 },
                 {
-                  "replace": "src/environments/auth.environment.ts",
-                  "with": "src/environments/auth.environment.prod.ts"
+                  "replace": "src/environments/session-api.environment.ts",
+                  "with": "src/environments/session-api.environment.prod.ts"
                 },
                 {
-                  "replace": "src/environments/store.environment.ts",
-                  "with": "src/environments/store.environment.prod.ts"
+                  "replace": "src/environments/store-api.environment.ts",
+                  "with": "src/environments/store-api.environment.prod.ts"
                 },
                 {
-                  "replace": "src/environments/data.environment.ts",
-                  "with": "src/environments/data.environment.prod.ts"
+                  "replace": "src/environments/data-api.environment.ts",
+                  "with": "src/environments/data-api.environment.prod.ts"
                 }
               ],
               "optimization": true,
