--- a/travis.yml
+++ b/travis.yml
@@ -2,7 +2,7 @@ language: node_js
 node_js: 12
 branches:
   only:
-  - use-travis-ci
+  - source
 before_script:
   - npm install -g @angular/cli
 script:
