--- a/travis.yml
+++ b/travis.yml
@@ -1,8 +1,8 @@
 language: node_js
 node_js: 12
 branches:
-  only:
-  - source
+  except:
+  - demo
 before_script:
   - npm install -g @angular/cli
 script:
