--- a/angular.json
+++ b/angular.json
@@ -69,6 +69,10 @@
                 {
                   "replace": "src/environments/data-api.environment.ts",
                   "with": "src/environments/data-api.environment.prod.ts"
+                },
+                {
+                  "replace": "src/environments/data-access-api.environment.ts",
+                  "with": "src/environments/data-access-api.environment.prod.ts"
                 }
               ],
               "optimization": true,
