--- a/angular.json
+++ b/angular.json
@@ -24,8 +24,8 @@
               "src/assets/img"
             ],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.css"
+              "src/styles.css",
+              "src/material-theme.scss"
             ],
             "scripts": []
           },
