--- a/angular.json
+++ b/angular.json
@@ -59,20 +59,8 @@
                   "with": "src/environments/environment.prod.ts"
                 },
                 {
-                  "replace": "src/environments/session-api.environment.ts",
-                  "with": "src/environments/session-api.environment.prod.ts"
-                },
-                {
-                  "replace": "src/environments/store-api.environment.ts",
-                  "with": "src/environments/store-api.environment.prod.ts"
-                },
-                {
-                  "replace": "src/environments/data-api.environment.ts",
-                  "with": "src/environments/data-api.environment.prod.ts"
-                },
-                {
-                  "replace": "src/environments/data-access-api.environment.ts",
-                  "with": "src/environments/data-access-api.environment.prod.ts"
+                  "replace": "src/environments/environment-modules.ts",
+                  "with": "src/environments/environment-modules.prod.ts"
                 }
               ],
               "optimization": true,
