--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "trebol-ng",
-  "version": "1.5.15",
-  "revision": 2,
+  "version": "1.5.16",
+  "revision": 0,
   "license": "MIT",
   "scripts": {
     "ng": "ng",
@@ -31,14 +31,21 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1102.14",
+    "@angular-eslint/builder": "4.3.0",
+    "@angular-eslint/eslint-plugin": "4.3.0",
+    "@angular-eslint/eslint-plugin-template": "4.3.0",
+    "@angular-eslint/schematics": "4.3.0",
+    "@angular-eslint/template-parser": "4.3.0",
     "@angular/cli": "~11.2.14",
     "@angular/compiler-cli": "~11.2.14",
     "@angular/language-service": "~11.2.14",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
+    "@typescript-eslint/eslint-plugin": "4.16.1",
+    "@typescript-eslint/parser": "4.16.1",
     "angular-cli-ghpages": "^0.6.2",
-    "codelyzer": "^6.0.0",
+    "eslint": "^7.6.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.3.4",
@@ -49,7 +56,6 @@
     "protractor": "~7.0.0",
     "querystringify": ">=2.0.0",
     "ts-node": "~7.0.0",
-    "tslint": "~6.1.0",
     "typescript": "~4.1.6"
   }
 }
