update package name, version and set to public
update all references to old package name

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -25,7 +25,7 @@
     }
   ],
   "contributorsPerLine": 7,
-  "projectName": "trebol-ng",
+  "projectName": "ngx-trebol-frontend",
   "projectOwner": "bglamadrid",
   "repoType": "github",
   "repoHost": "https://github.com",
