update angular-cli-ghpages plugin

--- a/angular.json
+++ b/angular.json
@@ -162,7 +162,7 @@
           "options": {
             "baseHref": "https://trebol-ecommerce.github.io/ngx-trebol-frontend/",
             "branch": "demo",
-            "configuration": "demo"
+            "buildTarget": "ngx-trebol-frontend:build:demo"
           }
         }
       }
