--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "4.16.1",
     "@typescript-eslint/parser": "4.16.1",
+    "all-contributors-cli": "^6.20.0",
     "angular-cli-ghpages": "^1.0.0-rc.2",
     "eslint": "^7.6.0",
     "jasmine-core": "~3.6.0",
