--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -22,6 +22,15 @@
       "contributions": [
         "examples"
       ]
+    },
+    {
+      "login": "Fictionistique",
+      "name": "Chirag",
+      "avatar_url": "https://avatars.githubusercontent.com/u/40859110?v=4",
+      "profile": "https://github.com/Fictionistique",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7,
@@ -29,5 +38,6 @@
   "projectOwner": "bglamadrid",
   "repoType": "github",
   "repoHost": "https://github.com",
-  "skipCi": true
+  "skipCi": true,
+  "commitConvention": "none"
 }
