fix contribution type for dmodena

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -20,7 +20,7 @@
       "avatar_url": "https://avatars3.githubusercontent.com/u/11446011?v=4",
       "profile": "https://github.com/dmodena",
       "contributions": [
-        "examples"
+        "example"
       ]
     },
     {
