update project owner

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -35,7 +35,7 @@
   ],
   "contributorsPerLine": 7,
   "projectName": "ngx-trebol-frontend",
-  "projectOwner": "bglamadrid",
+  "projectOwner": "trebol-ecommerce",
   "repoType": "github",
   "repoHost": "https://github.com",
   "skipCi": true,
