--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "karma-firefox-launcher": "^2.1.1",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
+    "karma-safari-launcher": "^1.0.0",
     "protractor": "~7.0.0",
     "querystringify": ">=2.0.0",
     "ts-node": "~7.0.0",
