--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
     "karma-safari-launcher": "^1.0.0",
+    "karma-spec-reporter": "0.0.32",
     "protractor": "~7.0.0",
     "querystringify": ">=2.0.0",
     "ts-node": "~7.0.0",
