--- a/angular.json
+++ b/angular.json
@@ -156,8 +156,8 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css",
-              "src/styles.css"
+              "src/styles.css",
+              "src/material-theme.scss"
             ],
             "scripts": [],
             "assets": [
