chore: add mock data
include set of products, lists and categories
remove stock product images
no product in mock data has any image whatsoever

--- a/angular.json
+++ b/angular.json
@@ -59,11 +59,6 @@
               ]
             },
             "localhost": {
-              "assets": [
-                "src/favicon.ico",
-                "src/assets/img/logo.png",
-                "src/assets/img/logo-invert.png"
-              ],
               "fileReplacements": [
                 {
                   "replace": "src/environments/environment.ts",
@@ -79,11 +74,6 @@
               "aot": true
             },
             "production": {
-              "assets": [
-                "src/favicon.ico",
-                "src/assets/img/logo.png",
-                "src/assets/img/logo-invert.png"
-              ],
               "fileReplacements": [
                 {
                   "replace": "src/environments/environment.ts",
@@ -162,7 +152,7 @@
             "scripts": [],
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets/img"
             ],
             "codeCoverage": true
           }
