--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-trebol-frontend",
-  "version": "1.2.1",
+  "version": "1.2.2",
   "revision": 0,
   "license": "MIT",
   "scripts": {
@@ -13,6 +13,7 @@
     "e2e": "ng e2e"
   },
   "private": false,
+  "keywords": [ "ecommerce", "shop", "store", "market", "angular", "material-design", "i18n" ],
   "dependencies": {
     "@angular/animations": "^11.2.14",
     "@angular/cdk": "^11.2.13",
