--- a/package.json
+++ b/package.json
@@ -13,42 +13,50 @@
     "e2e": "ng e2e"
   },
   "private": false,
-  "keywords": [ "ecommerce", "shop", "store", "market", "angular", "material-design", "i18n" ],
+  "keywords": [
+    "ecommerce",
+    "shop",
+    "store",
+    "market",
+    "angular",
+    "material-design",
+    "i18n"
+  ],
   "dependencies": {
-    "@angular/animations": "^11.2.14",
+    "@angular/animations": "^12.2.15",
     "@angular/cdk": "^11.2.13",
-    "@angular/common": "~11.2.14",
-    "@angular/compiler": "~11.2.14",
-    "@angular/core": "~11.2.14",
-    "@angular/forms": "~11.2.14",
+    "@angular/common": "~12.2.15",
+    "@angular/compiler": "~12.2.15",
+    "@angular/core": "~12.2.15",
+    "@angular/forms": "~12.2.15",
     "@angular/material": "^11.2.13",
-    "@angular/platform-browser": "~11.2.14",
-    "@angular/platform-browser-dynamic": "~11.2.14",
-    "@angular/router": "~11.2.14",
+    "@angular/platform-browser": "~12.2.15",
+    "@angular/platform-browser-dynamic": "~12.2.15",
+    "@angular/router": "~12.2.15",
     "core-js": "^2.5.4",
     "rxjs": "~6.6.3",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1102.14",
-    "@angular-eslint/builder": "4.3.0",
-    "@angular-eslint/eslint-plugin": "4.3.0",
-    "@angular-eslint/eslint-plugin-template": "4.3.0",
-    "@angular-eslint/schematics": "4.3.0",
-    "@angular-eslint/template-parser": "4.3.0",
-    "@angular/cli": "~11.2.14",
-    "@angular/compiler-cli": "~11.2.14",
-    "@angular/language-service": "~11.2.14",
-    "@angular/localize": "^11.2.14",
+    "@angular-devkit/build-angular": "~12.2.15",
+    "@angular-eslint/builder": "^12.0.0",
+    "@angular-eslint/eslint-plugin": "^12.0.0",
+    "@angular-eslint/eslint-plugin-template": "^12.0.0",
+    "@angular-eslint/schematics": "12.7.0",
+    "@angular-eslint/template-parser": "^12.0.0",
+    "@angular/cli": "~12.2.15",
+    "@angular/compiler-cli": "~12.2.15",
+    "@angular/language-service": "~12.2.15",
+    "@angular/localize": "^12.2.15",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
-    "@typescript-eslint/eslint-plugin": "4.16.1",
-    "@typescript-eslint/parser": "4.16.1",
+    "@typescript-eslint/eslint-plugin": "4.28.2",
+    "@typescript-eslint/parser": "4.28.2",
     "all-contributors-cli": "^6.20.0",
     "angular-cli-ghpages": "^1.0.0-rc.2",
-    "eslint": "^7.6.0",
+    "eslint": "^7.26.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.3.4",
@@ -63,6 +71,6 @@
     "protractor": "~7.0.0",
     "querystringify": ">=2.0.0",
     "ts-node": "~7.0.0",
-    "typescript": "~4.1.6"
+    "typescript": "~4.3.5"
   }
 }
