--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,7 @@
     ]
   },
   "angularCompilerOptions": {
-    "strictTemplates": true
+    "strictTemplates": true,
+    "enableI18nLegacyMessageIdFormat": false
   }
 }
