--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-trebol-frontend",
-  "version": "2.8.8",
+  "version": "2.8.9",
   "revision": 0,
   "license": "MIT",
   "scripts": {
@@ -52,8 +52,8 @@
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
-    "@typescript-eslint/eslint-plugin": "5.3.0",
-    "@typescript-eslint/parser": "5.3.0",
+    "@typescript-eslint/eslint-plugin": "~5.10.2",
+    "@typescript-eslint/parser": "~5.10.2",
     "all-contributors-cli": "^6.20.0",
     "angular-cli-ghpages": "^1.0.0-rc.2",
     "eslint": "^8.2.0",
