--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-trebol-frontend",
-  "version": "2.12.0",
+  "version": "2.12.0-rc.1",
   "revision": 0,
   "license": "MIT",
   "scripts": {
