--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@angular/platform-browser": "~13.4.0",
     "@angular/platform-browser-dynamic": "~13.4.0",
     "@angular/router": "~13.4.0",
+    "@types/ws": "^8.5.4",
     "core-js": "^2.5.4",
     "rxjs": "~6.6.3",
     "tslib": "^2.0.0",
