--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "importHelpers": true,
-    "target": "ES2022",
+    "target": "es2020",
     "resolveJsonModule": true,
     "typeRoots": [
       "node_modules/@types"
