refactor: rename instances of 'sell' to 'order'
see changelog for details

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-trebol-frontend",
-  "version": "2.12.1-rc.3",
+  "version": "2.13.0",
   "revision": 0,
   "license": "MIT",
   "scripts": {
