--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ jobs:
       - run: npm ci
       - run: ng lint
       - name: Test
-        uses: ianwalter/playwright-container@3.0.0
+        uses: ianwalter/playwright-container@v3.0.0
         with:
           args: npm run test-headless
       - run: ng build
