--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,7 @@ jobs:
           node-version: 22.x
           cache: 'npm'
       - name: Install project dependencies
-        run: npm ci
+        run: npm ci --force
       - name: Install Angular CLI
         run: npm i --global @angular/cli
       - name: Lint code
